--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "^2.1.3",
+    "angular-sortablejs": "^2.6.0",
     "com.synconset.imagepicker": "~2.1.10",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.2",
@@ -54,6 +55,7 @@
     "ionicons": "3.0.0",
     "js-base64": "^2.4.5",
     "rxjs": "5.5.2",
+    "sortablejs": "^1.7.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
