--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "^2.1.3",
+    "@types/jquery": "^3.3.5",
     "angular-sortablejs": "^2.6.0",
     "com.synconset.imagepicker": "~2.1.10",
     "cordova-android": "^6.2.3",
@@ -50,9 +51,11 @@
     "cordova-plugin-telerik-imagepicker": "^2.1.10",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.1",
+    "dplayer": "^1.24.0",
     "hammerjs": "^2.0.8",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "jquery": "^3.3.1",
     "js-base64": "^2.4.5",
     "rxjs": "5.5.2",
     "sortablejs": "^1.7.0",
